--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "^1.5.3"
+    "@floating-ui/dom": "^1.5.3",
+    "@supabase/supabase-js": "^2.38.2"
   }
 }
