--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@skeletonlabs/skeleton": "2.3.0",
     "@skeletonlabs/tw-plugin": "0.2.2",
     "@sveltejs/adapter-auto": "^2.0.0",
